--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "polars>=1.37.0",
+    "pymupdf>=1.26.7",
     "sectionproperties>=3.10.0",
     "sympy>=1.14.0",
+    "tabula-py[jpype]>=2.10.0",
 ]
 
 [tool.uv]
