--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=2.3.3",
     "polars>=1.37.0",
     "pymupdf>=1.26.7",
+    "rcdesign>=0.4.18",
     "sectionproperties>=3.10.0",
     "sympy>=1.14.0",
     "tabula-py[jpype]>=2.10.0",
