--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "cad-to-shapely>=0.3.2",
+    "docx-mailmerge2>=1.0.1",
     "fastexcel>=0.18.0",
     "marimo>=0.18.4",
     "matplotlib>=3.10.8",
